# goit-pyweb-hw-07

./: README.md  connect.py  db.sqlite  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 49a3a67ac5b7_init.py
