[tool.poetry]
name = "goit-pyweb-hw-07"
version = "0.1.0"
description = "Create table models in PostgreSQL database."
authors = ["Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
