[tool.poetry]
name = "goit-pyweb-hw-07"
version = "0.1.0"
description = "Fill a PostgreSQL database with random data and display statistics based on it."
authors = ["Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
faker = "^26.0.0"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
